# ff-cl-gen

./: Cargo.toml  clman.yaml  gen.Dockerfile
src/: lib.rs
src/cl/: field.cl
