[package]
name = "ff-cl-gen"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "OpenCL code generator for prime-fields"
documentation = "https://docs.rs/ff-cl-gen"
edition = "2018"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff-cl-gen"

[dependencies]
rand_core = "0.5"
fff = { version = "0.2.0", features = ["derive"] }
itertools = { version = "0.8.0" }
num-bigint = "0.2"

[dev-dependencies]
ocl = { version = "0.19.4", package = "fil-ocl"}
paired = { version = "0.18.0" }
rand = "0.7"
